# waveform-data

./: CHANGELOG.md  Cargo.toml  README.md
src/: channel.rs  error.rs  generator.rs  json.rs  lib.rs
tests/: accessors.rs  binary_validation.rs  channel.rs  concat.rs  create.rs  error_messages.rs  generator.rs  golden_demo.rs  json_semantics.rs  resample.rs  serialize.rs  slice.rs  time.rs
tests/common/: mod.rs
